# franny

./: .gn  BUILD.gn  DEPS  README.md
android_webview/: BUILD.gn
chrome/: BUILD.gn  chrome_paks.gni
chrome/android/: BUILD.gn  chrome_public_apk_tmpl.gni  java_sources.gni
chrome/app/: BUILD.gn  chrome_dll.rc  chrome_exe.rc  chrome_exe_main_mac.cc  chrome_main.cc
chrome/app/android/: chrome_jni_onload.cc
chrome/browser/: BUILD.gn  about_flags.cc  app_controller_mac.mm  browser_about_handler.cc
chrome/browser/extensions/: external_registry_loader_win.cc
chrome/browser/lifetime/: application_lifetime_desktop.cc
chrome/browser/ntp_tiles/: chrome_most_visited_sites_factory.cc
chrome/browser/prefs/: browser_prefs.cc
chrome/browser/profile_resetter/: triggered_profile_resetter_win.cc
chrome/browser/profiles/: chrome_browser_main_extra_parts_profiles.cc  profile_io_data.cc
chrome/browser/search/: search.cc
chrome/browser/ui/: BUILD.gn  browser_navigator.cc  tab_helpers.cc  ui_features.cc
chrome/browser/upgrade_detector/: installed_version_poller.h  (+3 more)
chrome/chrome_proxy/: chrome_proxy_main_win.cc
chrome/common/: BUILD.gn  channel_info_posix.cc  chrome_constants.cc  chrome_paths.cc  chrome_paths_linux.cc  chrome_paths_mac.mm  url_constants.h
chrome/install_static/: BUILD.gn  install_modes.cc  install_modes.h  install_util.cc
chrome/renderer/: BUILD.gn
components/metrics/: metrics_service_accessor.cc
components/ntp_tiles/: most_visited_sites.cc
components/strings/: BUILD.gn
components/url_formatter/: BUILD.gn  url_fixer.cc
components/vector_icons/: BUILD.gn
components/wifi/: network_properties.h  wifi_service.cc  wifi_service.h  wifi_service_mac.mm  wifi_service_win.cc
content/renderer/: render_thread_impl.cc
extensions/strings/: BUILD.gn
ios/chrome/credential_provider_extension/strings/: BUILD.gn
ios/chrome/open_extension/strings/: BUILD.gn
rebel/: .gitignore  BUILD.gn  rebel.gni  sources.gni
rebel/branding/: BRANDING  BUILD.gn  create_branded_grd.gni  create_branded_grd.py  create_channel_constants.py  create_linux_package_info.py
rebel/branding/rebel/mac/: app.icns  chromium_pub.pem  document.icns  internal_config.py
rebel/branding/rebel/vector_icons/: product.icon
rebel/chrome/android/java/src/org/chromium/chrome/browser/app/: RebelActivity.java
rebel/chrome/android/java/src/org/chromium/chrome/browser/ntp/: RemoteNtpBridge.java
rebel/chrome/app/: generated_resources.grdp  rebel_main_delegate.cc  rebel_main_delegate.h
rebel/chrome/browser/: channel_selection.cc  channel_selection.h  channel_selection_choices.h  rebel_content_browser_client.cc  rebel_content_browser_client.h  rebel_main_extra_parts.cc  rebel_main_extra_parts.h
rebel/chrome/browser/android/ntp/: remote_ntp_bridge.cc  remote_ntp_bridge.h
rebel/chrome/browser/mac/: sparkle_glue.h  sparkle_glue.mm
rebel/chrome/browser/ntp/: remote_ntp_browsertest.cc  remote_ntp_icon_receiver.cc  remote_ntp_icon_receiver.h  remote_ntp_icon_storage.cc  remote_ntp_icon_storage.h  remote_ntp_offline_resources.cc  remote_ntp_offline_resources.h  remote_ntp_search_provider.cc  remote_ntp_search_provider.h  remote_ntp_service.cc  remote_ntp_service.h  remote_ntp_service_factory.cc  remote_ntp_service_factory.h  remote_ntp_service_impl.cc  remote_ntp_service_impl.h  remote_ntp_source.cc  remote_ntp_source.h  remote_ntp_theme_delegate.h  remote_ntp_theme_provider.cc  remote_ntp_theme_provider.h  remote_ntp_wifi_service.cc  remote_ntp_wifi_service.h
rebel/chrome/browser/prefs/: rebel_prefs.cc  rebel_prefs.h
rebel/chrome/browser/resources/: BUILD.gn  rebel_resources.grd  remote_ntp_internals.css  remote_ntp_internals.html  remote_ntp_internals.js
rebel/chrome/browser/ui/ntp/: remote_ntp_navigation_throttle.cc  remote_ntp_navigation_throttle.h  remote_ntp_router.cc  remote_ntp_router.h  remote_ntp_tab_helper.cc  remote_ntp_tab_helper.h
rebel/chrome/browser/ui/webui/: remote_ntp_internals_ui.cc  remote_ntp_internals_ui.h
rebel/chrome/common/: rebel_content_client.cc  rebel_content_client.h
rebel/chrome/common/ntp/: BUILD.gn  remote_ntp.mojom  remote_ntp_icon_util.cc  remote_ntp_icon_util.h  remote_ntp_prefs.cc  remote_ntp_prefs.h  remote_ntp_types.h
rebel/chrome/install_static/: rebel_install_modes.cc  rebel_install_modes.h
rebel/chrome/installer/linux/common/: chromium-browser.appdata.xml  chromium-browser.info
rebel/chrome/renderer/: rebel_content_renderer_client.cc  rebel_content_renderer_client.h
rebel/chrome/renderer/ntp/: remote_ntp.cc  remote_ntp.h  remote_ntp_extension.cc  remote_ntp_extension.h  remote_ntp_icon_parser.cc  remote_ntp_icon_parser.h
rebel/chrome/test/: BUILD.gn
rebel/chrome/test/data/remote_ntp/: favicon.html  favicon_fluid.html  favicon_size.html  favicon_small.html  favicon_touch.html  fluid.html  fluid_size.html  fluid_touch.html  index.html  invalid.html  sizes.html  touch.html  touch_gif.html  touch_jpg.html  touch_size.html
rebel/chrome/test/data/remote_ntp/fallback/: simple.html
rebel/components/url_formatter/: rebel_constants.cc  rebel_constants.h
rebel/ios/chrome/browser/ntp/: remote_ntp_icon_parser.h  remote_ntp_icon_parser.mm  remote_ntp_service_factory_ios.h  remote_ntp_service_factory_ios.mm  remote_ntp_service_ios.h  remote_ntp_service_ios.mm
rebel/ios/chrome/browser/ui/ntp/: remote_ntp_api_provider.h  remote_ntp_api_provider.mm  remote_ntp_scheme_handler.h  remote_ntp_scheme_handler.mm  remote_ntp_tile_view.h  remote_ntp_tile_view.mm  remote_ntp_view.h  remote_ntp_view.mm  remote_ntp_view_controller.h  remote_ntp_view_controller.mm  remote_ntp_view_script_message_handler.h  remote_ntp_view_script_message_handler.mm
rebel/ios/chrome/browser/web/: rebel_web_client.h  rebel_web_client.mm
rebel/ios/web/favicon/resources/: touch_icon_utils.ts
rebel/scripts/: patch_tool.py
rebel/services/network/: data_fetcher.cc  data_fetcher.h  remote_ntp_api_allow_list.cc  remote_ntp_api_allow_list.h
sandbox/linux/: BUILD.gn
tools/grit/: grit_args.gni
tools/gritsettings/: resource_ids.spec
ui/resources/: ui_resources.grd
(+77 files in other folders)
