# Copyright 2022 Viasat Inc. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("rebel") {
  testonly = true

  if (is_win || is_mac || is_linux) {
    deps = [
      "//chrome",
      "//chrome/installer",
    ]

    if (is_win) {
      deps += [
        "//chrome/installer/gcapi",
        "//chrome/installer/mini_installer",
      ]
    }

    if (!is_official_build) {
      deps += [ "//rebel/chrome/test:rebel_browser_tests" ]
    }
  } else if (is_android) {
    deps = [ "//chrome/android:chrome_public_apk" ]
  } else if (is_ios) {
    deps = [ "//ios/chrome/app:chrome" ]
  }
}
