# Copyright 2022 Viasat Inc. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//rebel/rebel.gni")

rebel_build_sources = [ "build/buildflag.h" ]

rebel_chrome_app_sources = [
  "chrome/app/rebel_main_delegate.cc",
  "chrome/app/rebel_main_delegate.h",
]

_rebel_common_chrome_browser_sources = [
  "chrome/browser/ntp/remote_ntp_icon_storage.cc",
  "chrome/browser/ntp/remote_ntp_icon_storage.h",
  "chrome/browser/ntp/remote_ntp_offline_resources.cc",
  "chrome/browser/ntp/remote_ntp_offline_resources.h",
  "chrome/browser/ntp/remote_ntp_search_provider.cc",
  "chrome/browser/ntp/remote_ntp_search_provider.h",
  "chrome/browser/ntp/remote_ntp_service.cc",
  "chrome/browser/ntp/remote_ntp_service.h",
  "chrome/browser/ntp/remote_ntp_theme_delegate.h",
  "chrome/browser/prefs/rebel_prefs.cc",
]

if (is_ios) {
  rebel_ios_chrome_browser_ntp_sources = _rebel_common_chrome_browser_sources

  rebel_ios_chrome_browser_ntp_sources += [
    "ios/chrome/browser/ntp/remote_ntp_icon_parser.h",
    "ios/chrome/browser/ntp/remote_ntp_icon_parser.mm",
    "ios/chrome/browser/ntp/remote_ntp_service_factory_ios.h",
    "ios/chrome/browser/ntp/remote_ntp_service_factory_ios.mm",
    "ios/chrome/browser/ntp/remote_ntp_service_ios.h",
    "ios/chrome/browser/ntp/remote_ntp_service_ios.mm",
  ]
} else {
  rebel_chrome_browser_sources = _rebel_common_chrome_browser_sources

  rebel_chrome_browser_sources += [
    "chrome/browser/ntp/remote_ntp_icon_receiver.cc",
    "chrome/browser/ntp/remote_ntp_icon_receiver.h",
    "chrome/browser/ntp/remote_ntp_service_factory.cc",
    "chrome/browser/ntp/remote_ntp_service_factory.h",
    "chrome/browser/ntp/remote_ntp_service_impl.cc",
    "chrome/browser/ntp/remote_ntp_service_impl.h",
    "chrome/browser/ntp/remote_ntp_source.cc",
    "chrome/browser/ntp/remote_ntp_source.h",
    "chrome/browser/rebel_content_browser_client.cc",
    "chrome/browser/rebel_content_browser_client.h",
    "chrome/browser/rebel_main_extra_parts.cc",
    "chrome/browser/rebel_main_extra_parts.h",
  ]

  if (is_android) {
    rebel_chrome_browser_sources += [
      "chrome/browser/android/ntp/remote_ntp_bridge.cc",
      "chrome/browser/android/ntp/remote_ntp_bridge.h",
    ]
  } else {
    rebel_chrome_browser_sources += [
      "chrome/browser/ntp/remote_ntp_theme_provider.cc",
      "chrome/browser/ntp/remote_ntp_theme_provider.h",
    ]
  }

  if (is_mac || is_win) {
    rebel_chrome_browser_sources += [
      "chrome/browser/channel_selection.cc",
      "chrome/browser/channel_selection.h",
      "chrome/browser/ntp/remote_ntp_wifi_service.cc",
      "chrome/browser/ntp/remote_ntp_wifi_service.h",
    ]
  }
}

rebel_chrome_browser_ui_sources = [
  "chrome/browser/ui/webui/remote_ntp_internals_ui.cc",
  "chrome/browser/ui/webui/remote_ntp_internals_ui.h",
]

if (is_ios) {
  rebel_ios_chrome_browser_ui_ntp_sources = rebel_chrome_browser_ui_sources

  rebel_ios_chrome_browser_ui_ntp_sources += [
    "ios/chrome/browser/ui/ntp/remote_ntp_api_provider.h",
    "ios/chrome/browser/ui/ntp/remote_ntp_api_provider.mm",
    "ios/chrome/browser/ui/ntp/remote_ntp_scheme_handler.h",
    "ios/chrome/browser/ui/ntp/remote_ntp_scheme_handler.mm",
    "ios/chrome/browser/ui/ntp/remote_ntp_tile_view.h",
    "ios/chrome/browser/ui/ntp/remote_ntp_tile_view.mm",
    "ios/chrome/browser/ui/ntp/remote_ntp_view.h",
    "ios/chrome/browser/ui/ntp/remote_ntp_view.mm",
    "ios/chrome/browser/ui/ntp/remote_ntp_view_controller.h",
    "ios/chrome/browser/ui/ntp/remote_ntp_view_controller.mm",
    "ios/chrome/browser/ui/ntp/remote_ntp_view_script_message_handler.h",
    "ios/chrome/browser/ui/ntp/remote_ntp_view_script_message_handler.mm",
  ]
} else {
  rebel_chrome_browser_ui_sources += [
    "chrome/browser/ui/ntp/remote_ntp_navigation_throttle.cc",
    "chrome/browser/ui/ntp/remote_ntp_navigation_throttle.h",
    "chrome/browser/ui/ntp/remote_ntp_router.cc",
    "chrome/browser/ui/ntp/remote_ntp_router.h",
    "chrome/browser/ui/ntp/remote_ntp_tab_helper.cc",
    "chrome/browser/ui/ntp/remote_ntp_tab_helper.h",
  ]

  if (is_mac) {
    rebel_chrome_browser_ui_sources += [
      "chrome/browser/mac/sparkle_glue.h",
      "chrome/browser/mac/sparkle_glue.mm",
    ]
  }
}

if (is_android) {
  # These files are not built on Android by upstream, but are used by RemoteNTP.
  rebel_chrome_browser_ui_sources += [
    "//chrome/browser/ui/webui/favicon_source.cc",
    "//chrome/browser/ui/webui/favicon_source.h",
  ]
}

rebel_chrome_common_sources = [
  "chrome/common/ntp/remote_ntp_icon_util.cc",
  "chrome/common/ntp/remote_ntp_icon_util.h",
  "chrome/common/ntp/remote_ntp_prefs.cc",
  "chrome/common/ntp/remote_ntp_prefs.h",
  "chrome/common/ntp/remote_ntp_types.h",
]

if (!is_ios) {
  rebel_chrome_common_sources += [
    "chrome/common/rebel_content_client.cc",
    "chrome/common/rebel_content_client.h",
  ]
}

rebel_chrome_install_static_sources = [
  "chrome/install_static/rebel_install_modes.cc",
  "chrome/install_static/rebel_install_modes.h",
]

rebel_chrome_renderer_sources = [
  "chrome/renderer/ntp/remote_ntp.cc",
  "chrome/renderer/ntp/remote_ntp.h",
  "chrome/renderer/ntp/remote_ntp_extension.cc",
  "chrome/renderer/ntp/remote_ntp_extension.h",
  "chrome/renderer/ntp/remote_ntp_icon_parser.cc",
  "chrome/renderer/ntp/remote_ntp_icon_parser.h",
  "chrome/renderer/rebel_content_renderer_client.cc",
  "chrome/renderer/rebel_content_renderer_client.h",
]

rebel_chrome_android_java_sources = [
  "chrome/android/java/src/org/chromium/chrome/browser/app/RebelActivity.java",
  "chrome/android/java/src/org/chromium/chrome/browser/ntp/RemoteNtpBridge.java",
]

rebel_chrome_android_jni_sources = [ "chrome/android/java/src/org/chromium/chrome/browser/ntp/RemoteNtpBridge.java" ]

rebel_components_url_formatter_sources = [
  "components/url_formatter/rebel_constants.cc",
  "components/url_formatter/rebel_constants.h",
]

rebel_ios_chrome_browser_web_internal_sources = [
  "ios/chrome/browser/web/rebel_web_client.h",
  "ios/chrome/browser/web/rebel_web_client.mm",
]

rebel_ios_web_favicon_sources =
    [ "ios/web/favicon/resources/touch_icon_utils.ts" ]

rebel_services_network_public_cpp_sources = [
  "services/network/data_fetcher.cc",
  "services/network/data_fetcher.h",
  "services/network/remote_ntp_api_allow_list.cc",
  "services/network/remote_ntp_api_allow_list.h",
]
