# Copyright 2014 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/locales.gni")
import("//extensions/buildflags/buildflags.gni")
import("//tools/grit/grit_rule.gni")

import("//rebel/rebel.gni")

assert(enable_extensions)

grit("strings") {
  source = "extensions_strings.grd"
  outputs =
      [ "grit/extensions_strings.h" ] +
      process_file_template(all_chrome_locales,
                            [ "extensions_strings_{{source_name_part}}.pak" ])

  if (is_rebel_based) {
    source = "$root_gen_dir/rebel/extensions_strings/extensions_strings.grd"
    deps = [ "//rebel/branding:extensions_strings" ]
  }
}
