# Copyright 2020 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/locales.gni")
import("//tools/grit/grit_rule.gni")

import("//rebel/rebel.gni")

grit("strings") {
  source = "ios_credential_provider_extension_strings.grd"
  output_dir = "$root_gen_dir/ios/credential_provider_extension"
  outputs = [ "grit/ios_credential_provider_extension_strings.h" ]
  foreach(locale, all_chrome_locales) {
    outputs += [ "ios_credential_provider_extension_strings_$locale.pak" ]
  }

  if (is_rebel_based) {
    source = "$root_gen_dir/rebel/ios_credential_provider_extension_strings/ios_credential_provider_extension_strings.grd"
    deps = [ "//rebel/branding:ios_credential_provider_extension_strings" ]
  }
}
