# Copyright 2023 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/locales.gni")
import("//tools/grit/grit_rule.gni")

import("//rebel/rebel.gni")

grit("strings") {
  source = "ios_open_extension_${branding_path_product}_strings.grd"
  output_dir = "$root_gen_dir/ios/open_extension"
  outputs = [ "grit/ios_open_extension_branded_strings.h" ]
  foreach(locale, all_chrome_locales) {
    outputs +=
        [ "ios_open_extension_${branding_path_product}_strings_$locale.pak" ]
  }

  if (is_rebel_based) {
    source = "$root_gen_dir/rebel/ios_open_extension_chromium_strings/ios_open_extension_chromium_strings.grd"
    deps = [ "//rebel/branding:ios_open_extension_chromium_strings" ]
  }
}
